@@ -23,7 +23,7 @@
  <parent>
     <groupId>co.cask.cdap</groupId>
     <artifactId>cdap-clients</artifactId>
-    <version>1.0.1-SNAPSHOT</version>
+    <version>1.1.0-SNAPSHOT</version>
   </parent>
 
   <artifactId>cdap-authentication-clients</artifactId>
@@ -35,141 +35,6 @@
   <modules>
     <module>java</module>
   </modules>
-
-  <build>
-    <pluginManagement>
-      <plugins>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-compiler-plugin</artifactId>
-          <version>2.5.1</version>
-          <configuration>
-            <source>1.6</source>
-            <target>1.6</target>
-          </configuration>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-surefire-plugin</artifactId>
-          <version>2.14.1</version>
-          <configuration>
-            <argLine>-Xmx4096m -Djava.awt.headless=true -XX:MaxPermSize=256m</argLine>
-            <redirectTestOutputToFile>${surefire.redirectTestOutputToFile}</redirectTestOutputToFile>
-            <reuseForks>false</reuseForks>
-            <reportFormat>plain</reportFormat>
-            <systemPropertyVariables>
-              <java.io.tmpdir>${project.build.directory}</java.io.tmpdir>
-            </systemPropertyVariables>
-            <includes>
-              <include>**/*TestsSuite.java</include>
-              <include>**/Test*.java</include>
-              <include>**/*Test.java</include>
-              <include>**/*TestCase.java</include>
-            </includes>
-            <excludes>
-              <exclude>**/*TestRun.java</exclude>
-            </excludes>
-          </configuration>
-          <dependencies>
-            <dependency>
-              <groupId>org.apache.maven.surefire</groupId>
-              <artifactId>surefire-junit47</artifactId>
-              <version>2.14</version>
-            </dependency>
-          </dependencies>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.rat</groupId>
-          <artifactId>apache-rat-plugin</artifactId>
-          <version>0.10</version>
-          <executions>
-            <execution>
-              <id>rat-check</id>
-              <phase>validate</phase>
-              <goals>
-                <goal>check</goal>
-              </goals>
-              <configuration>
-                <excludes>
-                  <exclude>build-number.txt</exclude>
-                  <exclude>LICENSE*.txt</exclude>
-                  <exclude>*.rst</exclude>
-                  <exclude>**/*.md</exclude>
-                  <exclude>**/*.json</exclude>
-                  <exclude>logs/**</exclude>
-                  <exclude>docs/**</exclude>
-                  <exclude>conf/**</exclude>
-                  <exclude>data/**</exclude>
-                  <exclude>**/Apache-LICENSE-2.0</exclude>
-                  <exclude>**/VERSION</exclude>
-                  <exclude>**/*.patch</exclude>
-                  <exclude>**/auth.yml</exclude>
-                  <exclude>**/logrotate.d/**</exclude>
-                  <exclude>**/limits.d/**</exclude>
-                  <!-- Excludes AVRO schema files -->
-                  <exclude>**/*.avsc</exclude>
-                  <!-- Excludes examples by default, include it in the examples profile -->
-                  <exclude>examples/**</exclude>
-                  <exclude>**/testlogs/**</exclude>
-                  <exclude>**/*.yml</exclude>
-                </excludes>
-              </configuration>
-            </execution>
-          </executions>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-checkstyle-plugin</artifactId>
-          <version>2.12.1</version>
-          <executions>
-            <execution>
-              <id>validate</id>
-              <phase>process-test-classes</phase>
-              <configuration>
-                <configLocation>checkstyle.xml</configLocation>
-                <suppressionsLocation>suppressions.xml</suppressionsLocation>
-                <encoding>UTF-8</encoding>
-                <consoleOutput>true</consoleOutput>
-                <failsOnError>true</failsOnError>
-                <includeTestSourceDirectory>true</includeTestSourceDirectory>
-              </configuration>
-              <goals>
-                <goal>check</goal>
-              </goals>
-            </execution>
-          </executions>
-        </plugin>
-      </plugins>
-    </pluginManagement>
-
-    <plugins>
-      <plugin>
-        <groupId>org.apache.rat</groupId>
-        <artifactId>apache-rat-plugin</artifactId>
-        <version>0.10</version>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-checkstyle-plugin</artifactId>
-        <version>2.12.1</version>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.1</version>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-jar-plugin</artifactId>
-        <version>2.4</version>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.14.1</version>
-      </plugin>
-    </plugins>
-  </build>
 
   <profiles>
     <profile>
